--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -12,7 +12,7 @@
 </div>
   <div id="footer_links" class="container">
     <div class="row">
-      <div class="col-md-12 display-inline">
+      <div class="col-md-12 footerbar">
           <ul>
             <li><i class="glyphicon glyphicon-envelope glyphicon-inverse"></i> <a href="mailto:{{contact_email}}">{{ _('Email') }}</a></li>  
             <li><i class="icon-twitter glyphicon-inverse"></i> <a href="http://twitter.com/{{contact_twitter}}">{{ _('Twitter') }}</a></li>  
