--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,13 +1,19 @@
 /* Styling */
 /* ======= */
-html {
-  position: relative;
-  min-height: 100%;
+html,
+body {
+   margin:0;
+   padding:0;
+   height:100%;
+}
+#container {
+   min-height:100%;
+   position:relative;
 }
 
 body {
   background: url(../img/bl-book-stacks.png); no-repeat center center fixed;
-  margin-bottom: 80px;
+  padding-bottom: 80px;
 }
 h1,
 h2,
