--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
         <p>Cookies help us deliver our services. By using our services, you agree to our use of cookies. <button class="btn btn-xs btn-success" onclick="accept_cookies()"><i class="glyphicon glyphicon-thumbs-up"></i> OK</button> <a class="btn btn-default btn-default btn-xs" href="{{url_for('help.cookies_policy')}}"><i class="icon-info-sign"></i> More info</a></p>
     </div>
     {% endif %}
-    <footer>
+    <footer class="footer">
     {% include ['custom/_footer.html', '_footer.html'] ignore missing %}
     </footer>
     <!-- Le javascript
