--- a/templates/base.html
+++ b/templates/base.html
@@ -36,38 +36,42 @@
   </head>
 
   <body>
+    <div id="body-content">
+      <div id="main-body-content">
+      {% if not current_user.is_anonymous() %}
+      <!-- checkpoint::logged-in::{{current_user.name}} -->
+      {% endif %}
   
-    {% if not current_user.is_anonymous() %}
-    <!-- checkpoint::logged-in::{{current_user.name}} -->
-    {% endif %}
-
-
-    {% set active_page = active_page | default('index') -%}
-    {% set active_app  = active_app | default('none') -%}
-    {% include "_navbar.html" %}
-
-    <div class="container" style="min-height:400px;">
-
-    {% include "_flash_messages.html" %}
-
-    {% block content %}{% endblock %}
-
-    </div> <!-- /container -->
-    
-    
-    {% if show_cookies_warning %}
-    <div id="cookies_warning">
-        <p>Cookies help us deliver our services. By using our services, you agree to our use of cookies. <button class="btn btn-xs btn-success" onclick="accept_cookies()"><i class="glyphicon glyphicon-thumbs-up"></i> OK</button> <a class="btn btn-default btn-default btn-xs" href="{{url_for('help.cookies_policy')}}"><i class="icon-info-sign"></i> More info</a></p>
+  
+      {% set active_page = active_page | default('index') -%}
+      {% set active_app  = active_app | default('none') -%}
+      {% include "_navbar.html" %}
+  
+      <div class="container" style="min-height:400px;">
+  
+      {% include "_flash_messages.html" %}
+  
+      {% block content %}{% endblock %}
+  
+      </div> <!-- /container -->
+      
+      
+      {% if show_cookies_warning %}
+      <div id="cookies_warning">
+          <p>Cookies help us deliver our services. By using our services, you agree to our use of cookies. <button class="btn btn-xs btn-success" onclick="accept_cookies()"><i class="glyphicon glyphicon-thumbs-up"></i> OK</button> <a class="btn btn-default btn-default btn-xs" href="{{url_for('help.cookies_policy')}}"><i class="icon-info-sign"></i> More info</a></p>
+      </div>
+      {% endif %}
+      
     </div>
-    {% endif %}
-    <footer class="footer">
+    <footer id="sticky-footer">
     {% include ['custom/_footer.html', '_footer.html'] ignore missing %}
     </footer>
+    </div>
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script>
-    {% include 'cookies.js' %}
+      {% include 'cookies.js' %}
     </script>
   
 </body>
