--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
   <div class="splash">
-      <div class="container">
+      <div class="container" style="background-color: #ffffff;">
         <div class="row">
           <div class="col-offset-3 col-lg-6 text-center">
               <h1>{{ brand }}</h1>
