--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
   <div class="splash">
-      <div class="container" style="background-color: #ffffff;">
+      <div class="container">
         <div class="row">
           <div class="col-offset-3 col-lg-6 text-center">
               <h1>{{ brand }}</h1>
@@ -13,7 +13,7 @@
           </div>
       </div>
       </div> 
-      
+      <div class="container-fluid" style="background-color: #ffffff">
       <section>
         <h2><i class="glyphicon glyphicon-th"></i>{{ _('Featured Projects') }}</h2>
         <div class="row">
@@ -40,7 +40,7 @@
           {% endfor %}
         </div>
       </section>
-      
+      </div>
     {% if top_users %}
       <section id="top_users" class="grey">
         <h2><i class="icon-group"></i>{{ _('Most Active Volunteers') }}</h2>
