--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -13,7 +13,13 @@
           </div>
       </div>
       </div> 
-      <div class="container-fluid" style="background-color: #ffffff">
+      <div class="container-fluid">
+        <p id="index-main-desc">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+          incididunt ut labore et dolore magna aliqua.
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+        </p>
+      </div>
       <section>
         <h2><i class="glyphicon glyphicon-th"></i>{{ _('Featured Projects') }}</h2>
         <div class="row">
@@ -40,7 +46,6 @@
           {% endfor %}
         </div>
       </section>
-      </div>
     {% if top_users %}
       <section id="top_users" class="grey">
         <h2><i class="icon-group"></i>{{ _('Most Active Volunteers') }}</h2>
