--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -708,3 +708,46 @@ ul.users li a {
   font-family:verdana, sans-serif;
 }
 
+#index-tagline {
+  font-weight:normal;
+  color:#000000;
+  font-size:18px;
+  text-align:center;
+  font-family:verdana, sans-serif;
+}
+
+/* Background colors
+-------------------------*/
+
+.white-bg {
+  background-color: #ffffff;
+}
+
+
+/* Ouline Button
+-------------------------*/
+.btn-outline {
+    color: #563d7c;
+    background-color: transparent;
+    border-color: #563d7c
+}
+.btn-outline:active,
+.btn-outline:focus,
+.btn-outline:hover {
+    color: #fff;
+    background-color: #563d7c;
+    border-color: #563d7c
+}
+.btn-outline-inverse {
+    color: #fff;
+    background-color: transparent;
+    border-color: #cdbfe3
+}
+.btn-outline-inverse:active,
+.btn-outline-inverse:focus,
+.btn-outline-inverse:hover {
+    color: #563d7c;
+    text-shadow: none;
+    background-color: #fff;
+    border-color: #fff
+}
