Change to main description the project

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -14,9 +14,10 @@
       <div class="container container-padded text-center">
          <div class="col-md-12">
             <p id="index-main-desc">
-               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-               incididunt ut labore et dolore magna aliqua.
-               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+               {{ brand }} is a crowd-sourcing platform focused on the retroconversion of the
+               British Library's printed and card catalogues. By participating
+               you will have a direct impact on making a diverse range of research materials
+               available to search freely online.
             </p>
          </div>
       </div>
