--- a/templates/base.html
+++ b/templates/base.html
@@ -73,6 +73,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
 <script>
   {% include 'cookies.js' %}
+  {% include 'scripts.js' %}
 </script>
   
 </body>
