--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -1,3 +1,4 @@
+<div class="container container-main">
     <div class="row">
         <div class="col-md-11">
             <h1>{{ _('About') }}</h1>
@@ -36,3 +37,4 @@
             </ul>
         </div>
     </div>
+</div>
